force-app/main/default/objects/Production_Order__c/Production_Order__c.object-meta.xml
<CustomObject>
    <description>Production Order approval form</description>
    <label>Production Order</label>
    <nameField>
        <displayFormat>ODP-{0000}</displayFormat>
        <label>Production Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>