force-app/main/default/objects/Production_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Production Orders</relationshipLabel>
    <relationshipName>Production_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>