force-app/main/default/objects/Production_Order__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Production Orders</relationshipLabel>
    <relationshipName>Production_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>