force-app/main/default/objects/Production_Order__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Move stock from Capital for a Demo</fullName>
            </value>
            <value>
                <fullName>Place a new order for demo</fullName>
            </value>
            <value>
                <fullName>Move stock from Capital for Rental</fullName>
            </value>
            <value>
                <fullName>Place a new order for rental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>