force-app/main/default/objects/Production_Order__c/listViews/All_Orders.listView-meta.xml
<ListView>
    <fullName>All_Orders</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Customer__c</columns>
    <columns>Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Closed__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>